changed colors head and foot. fixed spacing on projectdisplay. added link to deployed project.

--- a/src/styles/Footer.scss
+++ b/src/styles/Footer.scss
@@ -1,13 +1,13 @@
 .footer {
     width: 100%;
     height: 200px;
-    background: rgb(27, 27, 138);
+    background: #3e497a;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     padding-top: 10px;
-    margin-top: 200px;
+    margin-top: 300px;
 
     p {
         color: white;
