--- a/src/styles/Navbar.scss
+++ b/src/styles/Navbar.scss
@@ -1,7 +1,7 @@
 .navbar {
     width: 100%;
     height: 100px;
-    background: rgb(27, 27, 138);
+    background: #3e497a;
     display: flex;
     flex-wrap: wrap;
     position: fixed;
