--- a/src/styles/ProjectDisplay.scss
+++ b/src/styles/ProjectDisplay.scss
@@ -7,6 +7,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    
 
     h1 {
         margin-top: 50px;
@@ -17,6 +18,7 @@
     img {
         width: 700px;
         border-radius: 10px;
+        margin-top: 100px;
     }
 
     p {
